@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-896: Fix memory leak in SuperstepMetricsRegistry (edunov via pavanka)  
+
   GIRAPH-897: Add an option to dump only live objects to JMap (edunov via pavanka)  
 
   GIRAPH-895: Trim the edges in Giraph (edunov via pavanka)
